# src/routes/orderRoutes.js
@@ -5,6 +5,7 @@ const express = require("express");
 const {
   createOrder,
   getUserOrders,
+  getAllAdminOrders,
   updateOrderStatus,
   deleteOrder,
 } = require("../controllers/orderController.js");
@@ -18,19 +19,17 @@ orderRouter.post("/create", protect, createOrder);
 
 orderRouter.get("/", protect, getUserOrders);
 
+orderRouter.get("/admin", protect, restrictTo("Admin"), getAllAdminOrders);
+
 orderRouter.patch(
   "/update/:orderId",
   protect,
+  restrictTo("Admin"),
   orderStatus("pending", "completed", "cancelled"),
   updateOrderStatus
 );
 
-orderRouter.delete(
-  "/delete/:orderId",
-  protect,
-  restrictTo("Admin"),
-  deleteOrder
-);
+orderRouter.delete("/delete/:orderId", protect, deleteOrder);
 
 module.exports = orderRouter;
 
